# culibtest

./: CMakeLists.txt  culibtest.sln  culibtest.vcxproj  culibtest.vcxproj.filters  helloWorld.vcxproj  libculibtest.vcxproj  readme.md
cmake/: cleanup.cmake  common.cmake
examples/helloWorld/: CMakeLists.txt  helloWorld.vcxproj
examples/helloWorld/src/: main.cu
examples/nowThen/: CMakeLists.txt
examples/nowThen/src/: main.cu
include/: culibtest.h
include/culibtest/: SomeClass.cuh  SomeClass.h  defines.h  user.h
manualbuild/: make.sh
src/: CMakeLists.txt
src/culibtest/: SomeClass.cu  temp.cpp
tests/: CMakeLists.txt  test.vcxproj.filters  test_SomeClass.h  test_all.cu  tests.vcxproj  tests.vcxproj.filters
